@@ -1,3 +1,7 @@
+2005-05-04  Sam Steingold  <sds@gnu.org>
+
+	* install.lisp (clisp-cmd): quote *CLISP-DRIVER* when it contains spaces
+
 2005-05-03  Sam Steingold  <sds@gnu.org>
 
 	* compiler.lisp (compile-file-pathname-helper): use read-time
